# az-pim-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLE_OUTPUTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  SUMMARY.md  VISUAL_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API_MAP.md  ARCHITECTURE.md  CLI_OUTPUT_COMPARISON.md  CONFIGURATION.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  MIGRATION.md  NEW_FEATURES.md  PERMISSIONS.md  PROBLEM_STATEMENT_RESPONSE.md  SECURITY.md  SIMPLIFICATION_IMPACT.md  UPGRADE_SUMMARY.md
docs/adr/: 0001-auth.md
scripts/: smoke_test.py
src/az_pim_cli/: __init__.py  auth.py  cli.py  config.py  console.py  dashboard.py  exceptions.py  helptext.py  models.py  ops.py  output.py  pim_client.py  report.py  resolver.py  ui.py
src/az_pim_cli/auth/: __init__.py  azurecli.py  msal_device.py
src/az_pim_cli/domain/: __init__.py  models.py
src/az_pim_cli/infra/: __init__.py  config_adapter.py  http_client_adapter.py
src/az_pim_cli/interfaces/: __init__.py  config.py  http_client.py
src/az_pim_cli/providers/: __init__.py  azure_arm.py  entra_graph.py
tests/: test_auth.py  test_cli.py  test_config.py  test_config_adapter.py  test_console.py  test_dashboard.py  test_exceptions.py  test_helptext.py  test_models.py  test_ops.py  test_output.py  test_providers.py  test_report.py  test_resolver.py  test_scope_resolution.py  test_ui.py
